Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 989
    • Issues 989
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 132
    • Merge requests 132
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1629

Closed
Open
Created Jul 22, 2021 by AlanKing95@AlanKing95

tsdemux: PCR PID contains no PCR

Recently, i found some HlS live programs that cannot be demuxed.

error information: Not enough information to calculate proper timestamp error uri: https://content.uplynk.com/channel/c77b777dad7148cb9cf82e8ac99c8e4f.m3u8

It can be reproduced by play this content: ffplay "https://content.uplynk.com/channel/c77b777dad7148cb9cf82e8ac99c8e4f.m3u8"

Found that the mpegtspacketizer cannot get correct base_time of pcrtable

Edited Jul 22, 2021 by Edward Hervey
Assignee
Assign to
Time tracking